# gst-ce-plugin

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
docs/: Makefile.in
docs/libs/: Makefile.am  gst-ce-plugin-libs-docs.sgml  gst-ce-plugin-libs.args  gst-ce-plugin-libs.hierarchy  gst-ce-plugin-libs.interfaces  gst-ce-plugin-libs.types
docs/plugins/: Makefile.am  gst-ce-plugin-plugins-docs.sgml  gst-ce-plugin-plugins-sections.txt  gst-ce-plugin-plugins.args  gst-ce-plugin-plugins.hierarchy  gst-ce-plugin-plugins.interfaces
docs/plugins/inspect/: plugin-ce.xml
ext/: Makefile.am  gstce.c  gstceaacenc.c  gstceaacenc.h  gstceh264enc.c  gstceh264enc.h  gstcejpegenc.c  gstcejpegenc.h  gstcemp3enc.c  gstcemp3enc.h
gst/: Makefile.am  Makefile.in  gstce.c  gstce.h  gstceaacenc.c  gstceaacenc.h  gstceaudenc.c  gstceaudenc.h  gstceh264enc.c  gstceh264enc.h  gstceimgenc.c  gstceimgenc.h  gstcejpegenc.c  gstcejpegenc.h  gstcempeg4enc.c  gstcempeg4enc.h  gstceslicepool.c  gstceslicepool.h  gstceutils.c  gstceutils.h  gstcevidenc.c  gstcevidenc.h
gst-libs/: Makefile.am  Makefile.in
gst-libs/ext/: Makefile.am
gst-libs/ext/ce/: Makefile.am  gstce.h  gstceaudenc.c  gstceaudenc.h  gstceimgenc.c  gstceimgenc.h  gstceutils.c  gstceutils.h  gstcevidenc.c  gstcevidenc.h
gst-libs/ext/cmem/: Makefile.am  gstceslicepool.c  gstceslicepool.h  gstcmemallocator.c  gstcmemallocator.h
gst-libs/gst/: Makefile.in
gst-libs/gst/cmem/: Makefile.am  Makefile.in  gstcmemallocator.c  gstcmemallocator.h
gst/perf/: Makefile.am  gstperf.c  gstperf.h
gst/priority/: Makefile.am  gstpriority.c  gstpriority.h
include/: gst-gtk-doc.mak
m4/: gst-gtk-doc.m4
pkgconfig/: Makefile.am  gstreamer-cmem.pc.in
tests/: Makefile.in
tests/check/: Makefile.am  Makefile.in
tests/check/elements/: ce_aacenc.c  ce_h264enc.c  ce_jpegenc.c  ce_mpeg4enc.c
tests/check/generic/: plugin-test.c  states.c
tests/check/libs/: cmem.c
tests/files/: Makefile.in
